--- a/TaskListRealm/Storyboards/Base.lproj/Main.storyboard
+++ b/TaskListRealm/Storyboards/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                             </connections>
                         </segmentedControl>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskListCell" textLabel="bwe-pG-DH4" detailTextLabel="EXT-l0-8zk" style="IBUITableViewCellStyleValue1" id="iEq-K8-pgr">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TaskListCell" textLabel="bwe-pG-DH4" detailTextLabel="EXT-l0-8zk" style="IBUITableViewCellStyleValue1" id="iEq-K8-pgr" customClass="TaskListViewCell" customModule="TaskListRealm" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="82" width="320" height="43.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="iEq-K8-pgr" id="Fys-De-dIc">
